--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,14 +4,17 @@
   "type": "module",
   "private": true,
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/node": "^24.0.6",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
     "@types/express": "^5.0.3",
-    "express": "^5.1.0",
-    "db": "*"
+    "db": "*",
+    "express": "^5.1.0"
   }
 }
